2003-02-04  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/internet/app.py: listenUNIX and unlistenUNIX methods added
	to Application class.  These should be used in place of listenTCP
	and unlistenTCP when UNIX sockets are desired.  The old,
	undocumented behavior no longer works!  Also added connectUDP and
	unlistenUDP to Application.

2003-01-31  Cory Dodt  <corydodt@yahoo.com>

	* twisted/lore/latex.py:  Don't treat comments like text nodes, just
	  drop them.

2003-01-30  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/internet/default.py
	  twisted/internet/base.py
	  twisted/internet/tcp.py
	  twisted/internet/ssl.py
	  twisted/internet/udp.py
	  twisted/internet/unix.py

	  Refactor of many internal classes, including Clients and
	Connectors.  UNIX socket functionality moved out of the TCP classes
	and into a new module, unix.py, and implementation of IReactorUNIX
	by PosixReactorBase made conditional on platform UNIX socket
	support.  Redundant inheritance cruft removed from various classes.

	* twisted/internet/app.py: listenWith, unlistenWith, and connectWith
	methods added to Application.

	* twisted/internet/interfaces.py: IReactorArbitrary added.

2003-01-30  Kevin Turner  <acapnotic@twistedmatrix.com>

	* twisted/manhole/service.py (IManholeClient.console): 1.35
	exception messages now use a Failure.
	(IManholeClient.listCapabilities): 1.35 Method to describe what
	capabilities a client has, i.e. "I can receive Failures for
	exceptions."

2003-01-29  Donovan Preston  <dp@twistedmatrix.com>

	* twisted/web/woven/controller.py
	  twisted/web/woven/template.py
	  twisted/web/woven/view.py
	  twisted/web/woven/widgets.py Major woven codepath cleanup

	* Uses a flat list of outstanding DOM nodes instead of
	recursion to keep track of where Woven is in the page
	rendering process

	* Removes View's dependency on DOMTemplate as a base
	class, in preparation for deprecation of DOMTemplate
	(all of the same semantics are now directly implemented